--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,9 @@
     "axios": "^0.19.2",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
+    "highlight.js": "^10.0.0",
     "koa": "^2.6.2",
+    "marked": "^1.0.0",
     "md5": "^2.2.1",
     "nuxt": "^2.0.0",
     "spark-md5": "^3.0.1"
